# Sentiment-Analysis-with-Natural-Language-Processing

./: .gitignore  Dockerfile  README.md  customer_reviews.csv  data_analysis.ipynb  data_cleaning.ipynb  environment.yml  explainability.py  get_kaggle_dataset.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: auto_format.yml
processed_csvs/: customer_reviews_preprocessed.csv
utils/: get_kaggle_dataset.py
