[project]
name = "bravium-nlp"
version = "0.1.0"
description = "NLP sentiment analysis project for Bravium's Internship program"
authors = [
    {name = "heitor",email = "heitor.nolla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = ["I", "B", "E", "F", "W"]
exclude = ["build", "dist", ".venv"]
fix = true

[tool.taskipy.tasks]
lint = "ruff check ."
fix = "ruff check . --fix"
format = "black ."
precommit = "task lint && task format"
